# MindMesh

./: .gitignore  LICENSE  README.md  examples.py  main.py  pyproject.toml  requirements.txt  setup.py
core/: Projet IC.db  agent.py  db.py  graphvisualization.py  questionnaire.py  questionnaire_deprecated.py
db/: constants.py  db_management.py  db_table_management.py
llm/: agent.py
profiles/: knowledge_profile.py  learner_profile.py
src/mindmesh/: __init__.py  app.py  config.py  main.py
src/mindmesh/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
src/mindmesh/ui/: __init__.py  base.py  cli_ui.py  factory.py  tkinter_ui.py
tests/: test_basic.py  test_db.py
ui/gradio/: __init__.py  app.py  chat.py  chat_box.py  chat_box2.py  knowledge_profile.py  learning_profile.py  main_page.py  user_account.py
ui/gradio/user/: KPquestionnaire_ui.py  LPquestionnaire_ui.py
ui/tkinter/: main_ui.py  ui_tk.py
ui/tkinter/secondary/: chat_ui.py  profile_creation_ui.py
